# api/candidats/candidats_response.go
@@ -1,4 +1,4 @@
-package condidats
+package candidats
 
 import (
 	"github.com/google/uuid"
@@ -55,3 +55,18 @@ type CondidatDetails struct {
 	LevelOfEducation string    `json:"educationLevel"`
 	University       string    `json:"university"`
 } //@name CondidatDetails
+
+// @Description	Signin represents the information required for signing in candidat.
+type Signin struct {
+	Email    string `json:"email" binding:"required,email,max=255"`     // Email is the email address of the user. It is required, should be a valid email, and maximum length is 255 characters.
+	Password string `json:"password" binding:"required,min=10,max=255"` // Password is the user's password. It is required, and its length should be between 10 and 255 characters.
+} //@name Signin
+
+// @Description	LoggedIn represents the candidat details after successful login.
+type LoggedIn struct {
+	ID        uuid.UUID `json:"ID"`            // ID is the unique identifier for the candidat.
+	Firstname string    `json:"first_name"`    // Name is the name of the candidat.
+	Lastname  string    `json:"last_name"`     // Name is the name of the candidat.
+	Email     string    `json:"email"`         // Email is the email address of the candidat.
+	CompanyID uuid.UUID `json:"workCompanyId"` // CompanyID is the unique identifier for the candidat company.
+} //@name LoggedIn
